# ixsie-exporter

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  Trunk.toml  index.html  tailwind.config.js
.github/workflows/: ci.yaml
shared/: Cargo.toml
shared/src/: lib.rs
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
