[package]
name = "ixsie-exporter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
futures = "0.3.26"
num-traits = "0.2.15"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["multipart", "cookies"] }
rpassword = "7.2.0"
structopt = "0.3.26"
tempfile = "3.3.0"
tokio = { version = "1.25.0", features = ["full"] }
tokio-stream = "0.1.11"
