[package]
name = "ixsie-exporter-ui"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
futures = "0.3.26"
gloo-utils = "0.1.6"
js-sys = "0.3.59"
num-traits = "0.2.15"
serde = { version = "1.0.140", features = ["derive"] }
serde-wasm-bindgen = "0.4.3"
shared = { path = "shared" }
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", rev = "904450cffe9687fdd4c5163077550edffa650a68", features = ["event"] }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
web-sys = "0.3.59"
yew = { version = "0.20.0", features = ["csr"] }

[workspace]
members = ["src-tauri", "shared", "xtask"]
