[package]
name = "ixsie-exporter"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
dirs = "4.0.0"
futures = "0.3.26"
num-traits = "0.2.15"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["multipart", "cookies"] }
rpassword = "7.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared" }
structopt = "0.3.26"
tauri = { version = "1.2", features = ["dialog-open", "shell-open"] }
tempfile = "3.3.0"
tokio = { version = "1.25.0", features = ["full"] }
tokio-stream = "0.1.12"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
