[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bytes = "1.4.0"
reqwest = "0.11.14"
sha2 = "0.10.6"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros"] }
